@@ -63,39 +63,6 @@ namespace GtkSharp.Generation {
 			}
 		}
 
-		protected StreamWriter CreateWriter () 
-		{
-			char sep = Path.DirectorySeparatorChar;
-			string dir = ".." + sep + NS.ToLower() + sep + "generated";
-			if (!Directory.Exists(dir)) {
-				Console.WriteLine ("creating " + dir);
-				Directory.CreateDirectory(dir);
-			}
-			String filename = dir + sep + Name + ".cs";
-			// Console.WriteLine ("creating " + filename);
-			
-			FileStream stream = new FileStream (filename, FileMode.Create, FileAccess.Write);
-			StreamWriter sw = new StreamWriter (stream);
-			
-			sw.WriteLine ("// This file was generated by the Gtk# code generator.");
-			sw.WriteLine ("// Any changes made will be lost if regenerated.");
-			sw.WriteLine ();
-			sw.WriteLine ("namespace " + NS + " {");
-			sw.WriteLine ();
-			sw.WriteLine ("\tusing System;");
-			sw.WriteLine ();
-
-			return sw;
-		}
-				
-		protected void CloseWriter (StreamWriter sw)
-		{
-			sw.WriteLine ();
-			sw.WriteLine ("}");
-			sw.Flush();
-			sw.Close();
-		}
-		
 		public void AppendCustom (StreamWriter sw, string custom_dir)
 		{
 			char sep = Path.DirectorySeparatorChar;
