@@ -1,5 +1,10 @@
 2003-10-04  Mike Kestner  <mkestner@ximian.com>
 
+	* generator/CallbackGen.cs : remove CloseWriter call.
+	* generator/GenBase.cs : kill CreateWriter and CloseWriter.
+
+2003-10-04  Mike Kestner  <mkestner@ximian.com>
+
 	* generator/AliasGen.cs : stub new Generate overload.
 	* generator/BoxedGen.cs : implement new Generate overload.
 	* generator/CallbackGen.cs (Generate):implement new overload.
